# sdl2-c-template

./: CMakeLists.txt  LICENSE  Makefile  README.md  run.sh  valgrind.sh
data/: 2.tif  deviation.txt
include/: utils.h
src/: CMakeLists.txt  global.c  global.h  jdl_global.c  jdl_global.h  jdl_image.c  jdl_image.h  levels.c  levels.h  main.c  utils.c
